Makefiles: updates/fixes - allow additional CFLAGS while fixing recursion for static recipe - update boilerplate

--- a/libmincrypt/Makefile
+++ b/libmincrypt/Makefile
@@ -3,29 +3,32 @@ CC = gcc
 endif
 AR = ar rc
 ifeq ($(windir),)
+EXT =
 RM = rm -f
 CP = cp
 else
+EXT = .exe
 RM = del
 CP = copy /y
 endif
 
-CFLAGS = -ffunction-sections -O3
-EXT = a
-LIB = libmincrypt.$(EXT)
+CFLAGS += -ffunction-sections -O3
+
+INC = -I..
+
+EXT = .a
+LIB = libmincrypt$(EXT)
 LIB_OBJS = dsa_sig.o p256.o p256_ec.o p256_ecdsa.o rsa.o sha.o sha256.o
-INC  = -I..
 
 all:$(LIB)
-
-clean:
-	$(RM) $(LIB_OBJS) $(LIB)
 
 $(LIB):$(LIB_OBJS)
 	$(CROSS_COMPILE)$(AR) $@ $^
 	$(CP) $@ ..
 
-
 %.o:%.c
-	$(CROSS_COMPILE)$(CC) -o $@ $(CFLAGS) -c $< $(INC)
+	$(CROSS_COMPILE)$(CC) -o $@ $(CFLAGS) -c $< $(INC) -Werror
+
+clean:
+	$(RM) $(LIB_OBJS) $(LIB)
 
